Fix: dto update
