# docs/swagger.json
@@ -132,19 +132,7 @@
                     "200": {
                         "description": "Пользователь найден",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/http.successResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/http.UserDTO"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/http.successResponse"
                         }
                     },
                     "401": {
@@ -208,7 +196,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/http.UserDTO"
+                                            "$ref": "#/definitions/domain.User"
                                         }
                                     }
                                 }
@@ -279,6 +267,55 @@
         }
     },
     "definitions": {
+        "domain.User": {
+            "type": "object",
+            "required": [
+                "date_of_birth",
+                "email",
+                "name",
+                "password"
+            ],
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "date_of_birth": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 2
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 8
+                },
+                "role": {
+                    "$ref": "#/definitions/domain.UserRole"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.UserRole": {
+            "type": "string",
+            "enum": [
+                "admin",
+                "appuser"
+            ],
+            "x-enum-varnames": [
+                "Admin",
+                "AppUser"
+            ]
+        },
         "http.LoginRequest": {
             "type": "object",
             "required": [
@@ -314,23 +351,6 @@
                 "password": {
                     "type": "string",
                     "example": "newpassword123"
-                }
-            }
-        },
-        "http.UserDTO": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "ivan@example.com"
-                },
-                "name": {
-                    "type": "string",
-                    "example": "Иван Иванов"
-                },
-                "user_id": {
-                    "type": "string",
-                    "example": "12bd787e-05d0-44eb-97e2-8f10e3a564e2"
                 }
             }
         },
